syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.AppointmentService";
option java_outer_classname = "AppointmentServiceImpl";

package AppointmentService;

service AppointmentService {
    // Schedules an appointment for a patient. (Unary RPC)
    rpc ScheduleAppointment (AppointmentRequest) returns (AppointmentResponse);

    // Streams available appointment slots for a doctor. (Server Streaming RPC)
    rpc GetAvailability (AvailabilityRequest) returns (stream AvailabilityResponse);

    // Retrieves a scheduled appointment by its ID. (Unary RPC)
    rpc GetAppointment (AppointmentIdRequest) returns (AppointmentResponse);

    // Adds a new doctor to the system. (Unary RPC)
    rpc AddDoctor (AddDoctorRequest) returns (AddDoctorResponse);

    // Adds availability for a doctor. (Unary RPC)
    rpc AddAvailability (AddAvailabilityRequest) returns (AddAvailabilityResponse);
}

// Request message for scheduling an appointment.
message AppointmentRequest {
    string patient_id = 1;
    string doctor_id = 2;
    string date_time = 3;
}

// Response message confirming appointment scheduling or retrieval.
message AppointmentResponse {
    bool success = 1;
    string message = 2;
}

// Request message for checking doctor availability.
message AvailabilityRequest {
    string doctor_id = 1;
}

// Response message streaming available slots.
message AvailabilityResponse {
    string date_time = 1;
}

// Request message for getting appointment by ID
message AppointmentIdRequest {
    string appointment_id = 1;
}

// Request message to add a new doctor.
message AddDoctorRequest {
    string doctor_id = 1;
}

// Response message confirming the doctor has been added.
message AddDoctorResponse {
    bool success = 1;
    string message = 2;
    string doctor_id = 3;
}

// Request message to add availability for a doctor.
message AddAvailabilityRequest {
    string doctor_id = 1;
    string time_slot = 2;
}

// Response message confirming the availability has been added.
message AddAvailabilityResponse {
    bool success = 1;
    string message = 2;
    string doctor_id = 3;
    string time_slot = 4;
}